--- a/matematica_quiz/index.html
+++ b/matematica_quiz/index.html
@@ -34,7 +34,8 @@
 					<div class="row">
 						<div class="col-md-6">
 							<h4>Pergunta</h4>	
-							<p id="pergunta"></p>
+							<p id="pergunta">Carregando...</p>
+							<span id="errou"></span>
 							<div class="form-group">
 								<label>
 									<input class="form-control" type="text" id="resposta">
@@ -48,6 +49,8 @@
 						</div>
 					</div>
 					
+
+
 				</div>	
 			</secion>
 
