--- a/matematica_quiz/index.html
+++ b/matematica_quiz/index.html
@@ -45,11 +45,31 @@
 						</div>
 						<div class="col-md-6">
 							<h4>Pontuação</h4>
-							<p id="pontuacao"></p>
+							<p id="pontuacao">Carregando...</p>
+							<button data-target="#modal" data-toggle="modal"  id="diagnostico" class="btn btn-info" type="button">Diagnostico</button>
 						</div>
 					</div>
 					
-
+					<div id="modal" class="modal" tabindex="-1" role="dialog">
+						<div class="modal-dialog" role="document">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title">Diagnostico dos seus erros</h5>
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+										<span aria-hidden="true">&times;</span>
+									</button>
+								</div>
+								<div class="modal-body">
+									<div id="lista">
+										
+									</div>
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+								</div>
+							</div>
+						</div>
+					</div>
 
 				</div>	
 			</secion>
