--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -23,6 +23,78 @@
 
 		<body>
 			
+			<div id="calc">
+				<div id="display">
+					<div id="result" class="row">
+						<div class="col-sm-9">
+							<input class="form-control" type="text" id="num">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-3">
+							<p id="9">9</p>
+						</div>
+						<div class="col-sm-3">
+							<p id="8">8</p>
+						</div>
+						<div class="col-sm-3">
+							<p id="7">7</p>
+						</div>
+						<div class="col-sm-1">
+							<p>*</p>
+						</div>
+						<div class="col-sm-1">
+							<p>x<sup>y</sup></p>
+						</div>
+					</div><!-- fim da primeira linha de numeros -->
+					<div class="row">
+						<div class="col-sm-3">
+							<p id="6">6</p>
+						</div>
+						<div class="col-sm-3">
+							<p id="5">5</p>
+						</div>
+						<div class="col-sm-3">
+							<p id="4">4</p>
+						</div>
+						<div class="col-sm-1">
+							<p>/</p>
+						</div>
+						<div class="col-sm-1">
+							<p>+</p>
+						</div>
+					</div><!-- fim da segunda linha de numeros -->
+					<div class="row">
+						<div class="col-sm-3">
+							<p id="3">3</p>
+						</div>
+						<div class="col-sm-3">
+							<p id="2">2</p>
+						</div>
+						<div class="col-sm-3">
+							<p id="1">1</p>
+						</div>
+						<div class="col-sm-1">
+							<p>-</p>
+						</div>
+						<div class="col-sm-1">
+							<p>&Sqrt;</p>
+						</div>
+					</div><!-- fim da terceira linha de numeros -->
+					<div class="row">
+						<div class="col-sm-3">
+							<p id="0">0</p>
+						</div>
+						<div class="col-sm-3">
+							<p id="ponto">.</p>
+						</div>
+						<div class="col-sm-3">
+							<button type="button" class="btn  btn-lg">=</button>
+						</div>
+					</div>
+				</div>
+			</div>
+
 			<script src="bootstrap/js/bootstrap.min.js"></script>
 			<script src="js/main.js"></script>
 		</body>
