Inicio da logica para as operaçoes

--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -61,7 +61,7 @@
 							<p>/</p>
 						</div>
 						<div class="col-sm-1">
-							<p>+</p>
+							<p id="somar">+</p>
 						</div>
 					</div><!-- fim da segunda linha de numeros -->
 					<div class="row">
@@ -75,7 +75,7 @@
 							<p id="1">1</p>
 						</div>
 						<div class="col-sm-1">
-							<p>-</p>
+							<p id="subtrair">-</p>
 						</div>
 						<div class="col-sm-1">
 							<p>&Sqrt;</p>
@@ -89,7 +89,7 @@
 							<p id="ponto">.</p>
 						</div>
 						<div class="col-sm-3">
-							<button type="button" class="btn  btn-lg">=</button>
+							<button id="resultado" type="button" class="btn  btn-lg">=</button>
 						</div>
 					</div>
 				</div>
