--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -41,10 +41,10 @@
 							<p id="7">7</p>
 						</div>
 						<div class="col-sm-1">
-							<p>*</p>
+							<p id="multiplicar">*</p>
 						</div>
 						<div class="col-sm-1">
-							<p>x<sup>y</sup></p>
+							<p id="potencia">x<sup>y</sup></p>
 						</div>
 					</div><!-- fim da primeira linha de numeros -->
 					<div class="row">
@@ -58,7 +58,7 @@
 							<p id="4">4</p>
 						</div>
 						<div class="col-sm-1">
-							<p>/</p>
+							<p id="dividir">/</p>
 						</div>
 						<div class="col-sm-1">
 							<p id="somar">+</p>
@@ -78,7 +78,7 @@
 							<p id="subtrair">-</p>
 						</div>
 						<div class="col-sm-1">
-							<p>&Sqrt;</p>
+							<p id="sqrt">&Sqrt;</p>
 						</div>
 					</div><!-- fim da terceira linha de numeros -->
 					<div class="row">
@@ -89,7 +89,11 @@
 							<p id="ponto">.</p>
 						</div>
 						<div class="col-sm-3">
-							<button id="resultado" type="button" class="btn  btn-lg">=</button>
+							<button id="resultado" type="button" class="btn">=</button>
+							
+						</div>
+						<div class="col-sm-3">
+							<button id="clear" type="button" class="btn btn-danger">C</button>
 						</div>
 					</div>
 				</div>
