Adição de um visualizador do resultado parcial

--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -27,6 +27,8 @@
 				<div id="display">
 					<div id="result" class="row">
 						<div class="col-sm-9">
+							<p>Resultado:</p>
+							<span id="resultado_parcial">...</span>
 							<input class="form-control" type="text" id="num">
 						</div>
 					</div>
