Modificando para gerar arquivo word

--- a/pdf/index.html
+++ b/pdf/index.html
@@ -9,13 +9,18 @@
 				p{
 					font-size:30px;
 				}
-				div{
+				#pdfAqui{
+					display: table;
+					margin: 0 auto;
 					margin-top:30px;
 				}
 
 			</style>
 			
 			<script src="js/jquery.js"></script>
+			<script src="word/googoose-master/jquery.googoose.js"></script>
+
+
 		</head>
 
 		<body>
@@ -28,7 +33,7 @@
 				</div>		
 				<button id="genPdf" class="btn btn-primary" type="button">Ok</button>
 			</div>
-			<div class="container" id="pdf">
+			<div id="pdf">
 				<div id="pdfAqui">
 					
 				</div>
