Impedindo digitar letras no campo dos minutos e corrigindo bug caso digitar um numero negativo

--- a/minutos_horas/index.html
+++ b/minutos_horas/index.html
@@ -25,7 +25,7 @@
 					<div class="row">
 						<div class="form-group">
 							<label>
-								<input type="text" class="form-control" id="minutos" placeholder="Digite os minutos"/>
+								<input type="number" class="form-control" id="minutos" placeholder="Digite os minutos"/>
 							</label>
 						</div>
 					</div>
