--- a/binary/index.html
+++ b/binary/index.html
@@ -2,8 +2,9 @@
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8" />	
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<!--<meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 	
 	<title>Binary convert</title>
 
@@ -11,6 +12,12 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
 	<link rel="stylesheet" href="css/estilo.css" />
+
+	<!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 
 </head>
 <body>
