Corrigindo o erro do input colocando uma virgula

--- a/binary/index.html
+++ b/binary/index.html
@@ -29,7 +29,7 @@
 					<label>
 						Número decimal
 					</label>
-					<input class="form-control" type="number" id="decimal" />
+					<input class="form-control" type="text" id="decimal" />
 				</div>
 			</div>
 
