--- a/hangman/index.html
+++ b/hangman/index.html
@@ -17,16 +17,16 @@
 		<h2 class="">Jogo da forca</h2>
 		<p id="numero_tentativas">numero de tentativas: 8</p>
 		<img src="img/jogo-da-forca.png" class="img-responsive">
-		<h1 id="secretWord">_ _ _ _ _ _</h1>
+		<h1 id="secretWord"></h1>
 	</div>
 	<div class="container" id="jogo">
 		<h4>Letras disponiveis</h4>
-		<p id="letras_disponiveis">A – B – C – D – E – F – G – H – I – J – K – L – M – N – O – P – Q – R – S – T – U – V – W – X – Y – Z</p>
+		<h3 id="letras_disponiveis"></h3>
 		<p>Estou pensando em um nome que tem 5 letras</p>
 		<label>Digite uma letra
-			<input type="text" class="form-control" id="input_user" />
+			<input type="text" maxlength="1" class="form-control" id="input_user" />
 		</label>
-		<button type="button" class="btn btn-primary">Arriscar</button>
+		<button type="button" id="arriscar" class="btn btn-primary">Arriscar</button>
 	</div>
 	
 	<div class="container">
