Deixando tanto o input quanto os nomes lowerCase e ajustando as letras disponiveis baseado nas letras ja arriscadas

--- a/hangman/index.html
+++ b/hangman/index.html
@@ -22,7 +22,7 @@
 	<div class="container" id="jogo">
 		<h4>Letras disponiveis</h4>
 		<h3 id="letras_disponiveis"></h3>
-		<p>Estou pensando em um nome que tem 5 letras</p>
+		<p id="qtd_letras"></p>
 		<label>Digite uma letra
 			<input type="text" maxlength="1" class="form-control" id="input_user" />
 		</label>
