--- a/downloads/index.html
+++ b/downloads/index.html
@@ -9,8 +9,8 @@
 	<link rel="stylesheet" href="style.css" >
 </head>
 <body>
-	<h2>Downloads de programas importantes (Windows)</h2>
 	<div class="container">
+		<h2>Downloads de programas importantes (Windows)</h2>
 		<div class="program">
 			<p>Adobe pdf Reader - Windows 7</p>
 			<a  target="_blank" href="https://ardownload2.adobe.com/pub/adobe/reader/win/AcrobatDC/1900820071/AcroRdrDC1900820071_pt_BR.exe">Baixar</a>
@@ -46,6 +46,18 @@
 		<div class="program" >
 			<p>Sublime - Windows 64 bits</p>
 			<a target="_blank" href="https://download.sublimetext.com/Sublime%20Text%20Build%203176%20x64%20Setup.exe">Baixar</a>
+		</div>
+		<div class="program">
+			<p>Utorrent - Windows</p>
+			<a target="_blank" href="http://download-hr.utorrent.com/track/stable/endpoint/utorrent/os/windows">Baixar</a>
+		</div>
+		<div class="program">
+			<p>Microsoft office 2010 - Windows 64 bits</p>
+			<a target="_blank" href="magnet:?xt=urn:btih:666bbfa82a3f512be87d9b3768990cfe9e879d7f&dn=Microsoft+Office+2010+Professionaus+PT-BR+X64+%28Retail%29&tr=udp%3A%2F%2Ftracker.openbittorrent.com%3A80&tr=udp%3A%2F%2Ftracker.publicbt.com%3A80&tr=udp%3A%2F%2Ftracker.istole.it%3A6969&tr=udp%3A%2F%2Ftracker.ccc.de%3A80">Baixar</a>
+		</div>
+		<div class="program">
+			<p>Microsoft office 2010 - Windows 32 bits</p>
+			<a target="_blank" href="magnet:?xt=urn:btih:35e7a054f434ee60f877c9e23104e60282732cca&dn=Microsoft+Office+2010+PT-BR+x86+completo+com+ativador&tr=udp%3A%2F%2Ftracker.openbittorrent.com%3A80&tr=udp%3A%2F%2Ftracker.publicbt.com%3A80&tr=udp%3A%2F%2Ftracker.istole.it%3A6969&tr=udp%3A%2F%2Ftracker.ccc.de%3A800">Baixar</a>
 		</div>
 	</div>
 </body>
